Fix api container size + reactQuery visibility on api part

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -118,7 +118,7 @@ h2 {
 
 /* API container */
 body.api {
-  footer {
+  footer.footer {
     display: none;
   }
 
@@ -161,17 +161,6 @@ body.api .pagination-nav {
       }
     }
   }
-}
-
-/* Rapidoc */
-#the-main-body.body {
-  background: purple !important;
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-#the-main-body .api .container .row .col > div {
-  padding: 0 !important;
 }
 
 /* Homepage */
